done laguge + flash

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,4 +1,48 @@
 {
-  "title": "Hello World!",
-  "welcome_message": "Welcome to my app!"
+  "translationsEN": {
+    "userName": "User Name",
+    "passWord": "Enter password",
+    "register": "Register now",
+    "forgot": "Forgot password?",
+    "signIn": "Sign in?",
+    "signInAnother": "Sign in with another account",
+    "exchangeRate": "exchange rate",
+    "interestRate": "Interest rate",
+    "network": "Network",
+    "contact": "Contact",
+    "exchangeTile": "Exchange rate",
+    "exchangeRate1": "Your exchange rate message 1",
+    "exchangeRate2": "Your exchange rate message 2",
+    "time": "Time",
+    "exchangeVsVND": "Foreign currency exchange rate compared to VND",
+    "foreign": "Foreign Currency",
+    "buy": "Buy Cash",
+    "buyByTrans": "Buy by transfer",
+    "sell": "Sell",
+    "interestTitle": "Interest rate",
+    "individualRate": "Interest rates for individual customers",
+    "notification": "Your notification message",
+    "productType": "Type of products",
+    "currencyType": "Type of currency",
+    "calc": "From of interest calculation",
+    "tenor": "Tenor",
+    "rate": "Interest rate (%/Year)",
+    "typeProduct1": "Online term deposit",
+    "typeProduct2": "Online accumulate deposit",
+    "formCalc": "Interest paid the end of the period",
+    "contactTitle": "Contact",
+    "slogan": "VietNam Russia Joint Venture Bank",
+    "headOffice": "Head office",
+    "address": "Your address",
+    "version": "Version 1.0.10",
+    "intro1": "Kết nối thành công",
+    "intro2": "Đồng hành phát triển",
+    "locationTitle": "ATM and branch locations",
+    "province": "Province/City",
+    "district": "District",
+    "nearest": "Nearest",
+    "branch": "Branch",
+    "direct": "Direct",
+    "notFount": "There are no ATMs/Branch in this area"
+  }
 }
